Sqlite and google sales data cleaning

--- a/numpypandasassignments/pandassolution.ipynb
+++ b/numpypandasassignments/pandassolution.ipynb
@@ -14,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "083bea8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +34,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e098557b",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with columns 'A', 'B', 'C' and index 'X', 'Y', 'Z'. Fill the DataFrame with random integers and access the element at row 'Y' and column 'B'."
@@ -41,6 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9a5911e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +59,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a02bddea",
    "metadata": {},
    "source": [
     "### Assignment 2: DataFrame Operations\n",
@@ -66,6 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d4e4da0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +87,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "701ca850",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with 3 columns and 4 rows filled with random integers. Compute the row-wise and column-wise sum."
@@ -90,6 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9d8a2ef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +117,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9d0b568",
    "metadata": {},
    "source": [
     "### Assignment 3: Data Cleaning\n",
@@ -120,6 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0bfe7967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,6 +152,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb39f295",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with 4 columns and 6 rows filled with random integers. Introduce some NaN values. Drop the rows with any NaN values."
@@ -151,6 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9aa39553",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1c8371c",
    "metadata": {},
    "source": [
     "### Assignment 4: Data Aggregation\n",
@@ -184,6 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a39a74fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +213,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b5d3e5d",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with 3 columns: 'Product', 'Category', and 'Sales'. Fill the DataFrame with random data. Group the DataFrame by 'Category' and compute the total sales for each category."
@@ -208,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4deddaa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +239,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "576e0c98",
    "metadata": {},
    "source": [
     "### Assignment 5: Merging DataFrames\n",
@@ -234,6 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "77370884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,6 +270,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "451596eb",
    "metadata": {},
    "source": [
     "2. Create two Pandas DataFrames with different columns. Concatenate the DataFrames along the rows and along the columns."
@@ -261,6 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1080d48d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,6 +304,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13dafb84",
    "metadata": {},
    "source": [
     "### Assignment 6: Time Series Analysis\n",
@@ -295,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e6959d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +335,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78356739",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with a datetime index ranging from '2021-01-01' to '2021-12-31' and one column filled with random integers. Compute the rolling mean with a window of 7 days."
@@ -322,6 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46607066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +364,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "191e269a",
    "metadata": {},
    "source": [
     "### Assignment 7: MultiIndex DataFrame\n",
@@ -351,6 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc318867",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,6 +396,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "561237f9",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with MultiIndex consisting of 'Category' and 'SubCategory'. Fill the DataFrame with random data and compute the sum of values for each 'Category' and 'SubCategory'."
@@ -379,6 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ed49d0ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,6 +424,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19db0f44",
    "metadata": {},
    "source": [
     "### Assignment 8: Pivot Tables\n",
@@ -407,6 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dbe1d66c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,6 +453,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e973332",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with columns 'Year', 'Quarter', and 'Revenue'. Create a pivot table to compute the mean 'Revenue' for each 'Quarter' by 'Year'."
@@ -432,6 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b9322c94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,6 +479,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5130efaf",
    "metadata": {},
    "source": [
     "### Assignment 9: Applying Functions\n",
@@ -458,6 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c42aa3e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,6 +507,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fcff1d1",
    "metadata": {},
    "source": [
     "2. Create a Pandas DataFrame with 3 columns and 6 rows filled with random integers. Apply a lambda function to create a new column that is the sum of the existing columns."
@@ -482,6 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef3c9fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,6 +533,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e944a028",
    "metadata": {},
    "source": [
     "### Assignment 10: Working with Text Data\n",
@@ -508,6 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d93fb031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,6 +561,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41ddaa1f",
    "metadata": {},
    "source": [
     "2. Create a Pandas Series with 5 random text strings. Extract the first three characters of each string."
@@ -532,6 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4797a18b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -563,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
