--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,23 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0., 4., 7., 8.],\n",
-       "        [4., 0., 3., 4.],\n",
-       "        [7., 3., 0., 2.],\n",
-       "        [8., 4., 2., 0.]]),\n",
-       " array([[0., 4., 7., 8.],\n",
-       "        [4., 0., 3., 4.],\n",
-       "        [7., 3., 0., 2.],\n",
-       "        [8., 4., 2., 0.]]))"
+       "array([[0., 4., 7., 8.],\n",
+       "       [4., 0., 3., 4.],\n",
+       "       [7., 3., 0., 2.],\n",
+       "       [8., 4., 2., 0.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +44,7 @@
     "distance = np.round(np.sqrt(dx**2 + dy**2))\n",
     "\n",
     "round_distance = np.round(distance, 2)\n",
-    "round_distance, distance"
+    "round_distance #, distance"
    ]
   },
   {
